--- a/index.html
+++ b/index.html
@@ -1,45 +1,59 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="bg-gray-50 dark:bg-gray-900">
 <head>
   <meta charset="UTF-8">
-  <title>My GitHub Stats & Projects</title>
-  <style>
-    body { font-family: Arial, sans-serif; margin: 2em; }
-    .repo { margin-bottom: 1em; }
-    .repo a { font-weight: bold; }
-  </style>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <title>CodewithD2 | Portfolio</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <script src="https://unpkg.com/feather-icons"></script>
 </head>
-<body>
-  <h1>My GitHub Stats & Projects</h1>
-  <div id="stats"></div>
-  <h2>Projects</h2>
-  <div id="repos"></div>
-  <script>
-    const username = 'CodewithD2'; // Change to your GitHub username
+<body class="text-gray-800 dark:text-gray-200 transition-colors duration-300">
+  <!-- Navbar -->
+  <nav class="flex justify-between items-center px-8 py-4 bg-white dark:bg-gray-800 shadow">
+    <span class="text-2xl font-bold">CodewithD2</span>
+    <div class="flex items-center gap-4">
+      <a href="#about" class="hover:underline">About</a>
+      <a href="#projects" class="hover:underline">Projects</a>
+      <a href="#contact" class="hover:underline">Contact</a>
+      <button id="dark-toggle" class="ml-4 focus:outline-none" title="Toggle dark mode">
+        <i data-feather="moon"></i>
+      </button>
+    </div>
+  </nav>
 
-    // Fetch user stats
-    fetch(`https://api.github.com/users/${username}`)
-      .then(res => res.json())
-      .then(user => {
-        document.getElementById('stats').innerHTML = `
-          <p><strong>Name:</strong> ${user.name || username}</p>
-          <p><strong>Followers:</strong> ${user.followers}</p>
-          <p><strong>Public Repos:</strong> ${user.public_repos}</p>
-        `;
-      });
+  <!-- Hero / About -->
+  <section id="about" class="max-w-3xl mx-auto mt-16 text-center">
+    <img id="avatar" class="mx-auto w-32 h-32 rounded-full shadow-lg mb-4" src="" alt="Avatar" />
+    <h1 class="text-4xl font-extrabold mb-2" id="name">Loading...</h1>
+    <p id="bio" class="text-lg mb-2 text-gray-600 dark:text-gray-400"></p>
+    <div class="flex justify-center gap-6 my-4 text-gray-700 dark:text-gray-300">
+      <span><i data-feather="users" class="inline w-5 h-5"></i> <span id="followers">0</span> Followers</span>
+      <span><i data-feather="folder" class="inline w-5 h-5"></i> <span id="repos">0</span> Repos</span>
+      <span><i data-feather="star" class="inline w-5 h-5"></i> <span id="stars">0</span> Stars</span>
+    </div>
+    <a id="profile-link" href="#" class="inline-block px-5 py-2 mt-2 bg-blue-600 text-white rounded hover:bg-blue-700 transition">View GitHub Profile</a>
+  </section>
 
-    // Fetch repositories
-    fetch(`https://api.github.com/users/${username}/repos?sort=updated`)
-      .then(res => res.json())
-      .then(repos => {
-        document.getElementById('repos').innerHTML = repos
-          .map(repo => `
-            <div class="repo">
-              <a href="${repo.html_url}" target="_blank">${repo.name}</a>
-              <p>${repo.description || ''}</p>
-            </div>
-          `).join('');
-      });
-  </script>
+  <!-- Projects -->
+  <section id="projects" class="max-w-5xl mx-auto mt-20 px-3">
+    <h2 class="text-3xl font-bold mb-8 text-center">Projects</h2>
+    <div id="project-list" class="grid gap-8 sm:grid-cols-2 lg:grid-cols-3"></div>
+  </section>
+
+  <!-- Contact -->
+  <section id="contact" class="max-w-2xl mx-auto mt-20 px-3 mb-16">
+    <h2 class="text-2xl font-bold mb-4">Contact</h2>
+    <p>Want to collaborate or have a question? Email me at <a href="mailto:your-email@example.com" class="text-blue-600 dark:text-blue-400 underline">your-email@example.com</a> or reach out on social media:</p>
+    <div class="flex gap-6 mt-4">
+      <a href="https://github.com/CodewithD2" target="_blank" title="GitHub"><i data-feather="github"></i></a>
+      <a href="https://twitter.com/yourtwitter" target="_blank" title="Twitter"><i data-feather="twitter"></i></a>
+      <!-- Add more socials as you like -->
+    </div>
+  </section>
+
+  <footer class="text-center text-sm py-3 text-gray-400 dark:text-gray-600">&copy; 2025 CodewithD2</footer>
+
+  <script src="main.js"></script>
+  <script>feather.replace()</script>
 </body>
 </html>
