--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="bg-gray-50 dark:bg-gray-900">
+<html lang="en" class="bg-gradient-to-tr from-purple-400 via-pink-500 to-red-500 dark:from-gray-900 dark:via-gray-800 dark:to-gray-900 min-h-screen">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -7,51 +7,54 @@
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <script src="https://unpkg.com/feather-icons"></script>
 </head>
-<body class="text-gray-800 dark:text-gray-200 transition-colors duration-300">
+<body class="transition-colors duration-700 min-h-screen flex flex-col justify-between">
   <!-- Navbar -->
-  <nav class="flex justify-between items-center px-8 py-4 bg-white dark:bg-gray-800 shadow">
-    <span class="text-2xl font-bold">CodewithD2</span>
-    <div class="flex items-center gap-4">
-      <a href="#about" class="hover:underline">About</a>
-      <a href="#projects" class="hover:underline">Projects</a>
-      <a href="#contact" class="hover:underline">Contact</a>
-      <button id="dark-toggle" class="ml-4 focus:outline-none" title="Toggle dark mode">
+  <nav class="flex items-center justify-between px-8 py-5 bg-white/70 dark:bg-gray-900/90 shadow-lg backdrop-blur-md sticky top-0 z-50">
+    <span class="text-3xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-purple-600 to-pink-500">CodewithD2</span>
+    <div class="flex items-center gap-6">
+      <a href="#about" class="font-semibold text-gray-800 dark:text-gray-200 hover:text-pink-500 transition">About</a>
+      <a href="#projects" class="font-semibold text-gray-800 dark:text-gray-200 hover:text-pink-500 transition">Projects</a>
+      <a href="#contact" class="font-semibold text-gray-800 dark:text-gray-200 hover:text-pink-500 transition">Contact</a>
+      <button id="dark-toggle" class="ml-4 p-2 rounded bg-gradient-to-br from-purple-400 to-pink-500 dark:from-gray-700 dark:to-gray-800 text-white shadow transition hover:scale-110" title="Toggle dark mode">
         <i data-feather="moon"></i>
       </button>
     </div>
   </nav>
 
   <!-- Hero / About -->
-  <section id="about" class="max-w-3xl mx-auto mt-16 text-center">
-    <img id="avatar" class="mx-auto w-32 h-32 rounded-full shadow-lg mb-4" src="" alt="Avatar" />
-    <h1 class="text-4xl font-extrabold mb-2" id="name">Loading...</h1>
-    <p id="bio" class="text-lg mb-2 text-gray-600 dark:text-gray-400"></p>
-    <div class="flex justify-center gap-6 my-4 text-gray-700 dark:text-gray-300">
-      <span><i data-feather="users" class="inline w-5 h-5"></i> <span id="followers">0</span> Followers</span>
-      <span><i data-feather="folder" class="inline w-5 h-5"></i> <span id="repos">0</span> Repos</span>
-      <span><i data-feather="star" class="inline w-5 h-5"></i> <span id="stars">0</span> Stars</span>
+  <section id="about" class="py-14 px-6 flex flex-col items-center text-center">
+    <div class="relative group mb-6">
+      <div class="absolute -inset-2 rounded-full blur-md bg-gradient-to-br from-pink-400 via-purple-500 to-indigo-400 opacity-70 group-hover:opacity-90 transition duration-700"></div>
+      <img id="avatar" class="relative w-36 h-36 rounded-full shadow-2xl border-4 border-white dark:border-gray-900 object-cover" src="" alt="Avatar" />
     </div>
-    <a id="profile-link" href="#" class="inline-block px-5 py-2 mt-2 bg-blue-600 text-white rounded hover:bg-blue-700 transition">View GitHub Profile</a>
+    <h1 id="name" class="text-5xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-purple-700 via-pink-500 to-red-400 drop-shadow mb-2 animate-pulse">Loading...</h1>
+    <p id="bio" class="text-xl mb-4 max-w-xl text-gray-900 dark:text-gray-200"></p>
+    <div class="flex justify-center gap-8 my-4 text-gray-800 dark:text-gray-200 text-lg">
+      <span class="flex flex-col items-center"><i data-feather="users" class="mb-1"></i><span id="followers">0</span> Followers</span>
+      <span class="flex flex-col items-center"><i data-feather="folder" class="mb-1"></i><span id="repos">0</span> Repos</span>
+      <span class="flex flex-col items-center"><i data-feather="star" class="mb-1"></i><span id="stars">0</span> Stars</span>
+    </div>
+    <a id="profile-link" href="#" class="inline-block px-6 py-2 mt-2 rounded-full bg-gradient-to-r from-purple-600 to-pink-500 text-white font-bold text-lg shadow-lg hover:scale-105 transition">View GitHub Profile</a>
   </section>
 
   <!-- Projects -->
-  <section id="projects" class="max-w-5xl mx-auto mt-20 px-3">
-    <h2 class="text-3xl font-bold mb-8 text-center">Projects</h2>
-    <div id="project-list" class="grid gap-8 sm:grid-cols-2 lg:grid-cols-3"></div>
+  <section id="projects" class="max-w-6xl mx-auto px-4 py-16">
+    <h2 class="text-4xl font-bold mb-10 text-center text-transparent bg-clip-text bg-gradient-to-r from-pink-600 via-purple-500 to-indigo-500">Featured Projects</h2>
+    <div id="project-list" class="grid gap-10 sm:grid-cols-2 lg:grid-cols-3"></div>
   </section>
 
   <!-- Contact -->
-  <section id="contact" class="max-w-2xl mx-auto mt-20 px-3 mb-16">
-    <h2 class="text-2xl font-bold mb-4">Contact</h2>
-    <p>Want to collaborate or have a question? Email me at <a href="mailto:your-email@example.com" class="text-blue-600 dark:text-blue-400 underline">your-email@example.com</a> or reach out on social media:</p>
-    <div class="flex gap-6 mt-4">
-      <a href="https://github.com/CodewithD2" target="_blank" title="GitHub"><i data-feather="github"></i></a>
-      <a href="https://twitter.com/yourtwitter" target="_blank" title="Twitter"><i data-feather="twitter"></i></a>
+  <section id="contact" class="max-w-2xl mx-auto px-4 py-14 bg-white/70 dark:bg-gray-900/90 rounded-xl shadow-xl mb-12">
+    <h2 class="text-3xl font-bold mb-4 text-transparent bg-clip-text bg-gradient-to-r from-purple-700 to-pink-500">Contact</h2>
+    <p class="mb-4 text-gray-800 dark:text-gray-200">Want to collaborate or have a question? Email me at <a href="mailto:your-email@example.com" class="text-pink-600 dark:text-pink-400 underline">your-email@example.com</a> or reach out on social media:</p>
+    <div class="flex gap-8 mt-2">
+      <a href="https://github.com/CodewithD2" target="_blank" title="GitHub" class="hover:scale-125 transition"><i data-feather="github"></i></a>
+      <a href="https://twitter.com/yourtwitter" target="_blank" title="Twitter" class="hover:scale-125 transition"><i data-feather="twitter"></i></a>
       <!-- Add more socials as you like -->
     </div>
   </section>
 
-  <footer class="text-center text-sm py-3 text-gray-400 dark:text-gray-600">&copy; 2025 CodewithD2</footer>
+  <footer class="text-center text-md py-6 text-gray-200 dark:text-gray-500 bg-transparent">&copy; 2025 <span class="text-pink-400 font-bold">CodewithD2</span></footer>
 
   <script src="main.js"></script>
   <script>feather.replace()</script>
