--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div class="flex items-center gap-6">
       <a href="#about" class="font-semibold text-gray-200 hover:text-pink-400 transition">About</a>
       <a href="#projects" class="font-semibold text-gray-200 hover:text-pink-400 transition">Projects</a>
+      <a href="#latest-video" class="font-semibold text-gray-200 hover:text-pink-400 transition">Latest Video</a>
       <a href="#contact" class="font-semibold text-gray-200 hover:text-pink-400 transition">Contact</a>
       <button id="dark-toggle" class="ml-4 p-2 rounded bg-gradient-to-br from-gray-800 to-gray-700 text-white shadow transition hover:scale-110" title="Toggle dark mode">
         <i data-feather="moon"></i>
@@ -43,14 +44,25 @@
     <div id="project-list" class="grid gap-10 sm:grid-cols-2 lg:grid-cols-3"></div>
   </section>
 
+  <!-- Latest YouTube Video -->
+  <section id="latest-video" class="max-w-3xl mx-auto px-4 py-12">
+    <h2 class="text-3xl font-bold mb-6 text-center text-transparent bg-clip-text bg-gradient-to-r from-red-400 via-pink-400 to-purple-400">Latest Video</h2>
+    <div id="youtube-latest" class="flex flex-col items-center"></div>
+    <div class="text-center mt-4">
+      <a href="https://www.youtube.com/@CodeWithD" target="_blank" class="inline-block px-5 py-2 rounded-full bg-gradient-to-r from-red-600 to-pink-500 text-white font-bold shadow-lg hover:scale-105 transition">
+        Visit My YouTube Channel
+      </a>
+    </div>
+  </section>
+
   <!-- Contact -->
   <section id="contact" class="max-w-2xl mx-auto px-4 py-14 bg-gray-900/90 rounded-xl shadow-xl mb-12">
     <h2 class="text-3xl font-bold mb-4 text-transparent bg-clip-text bg-gradient-to-r from-purple-400 to-pink-400">Contact</h2>
     <p class="mb-4 text-gray-200">Want to collaborate or have a question? Email me at <a href="mailto:your-email@example.com" class="text-pink-400 underline">your-email@example.com</a> or reach out on social media:</p>
     <div class="flex gap-8 mt-2">
       <a href="https://github.com/CodewithD2" target="_blank" title="GitHub" class="hover:scale-125 transition"><i data-feather="github"></i></a>
-      <a href="https://twitter.com/yourtwitter" target="_blank" title="Twitter" class="hover:scale-125 transition"><i data-feather="twitter"></i></a>
-      <!-- Add more socials as you like -->
+      <a href="https://www.facebook.com/diaa.el.din.atya" target="_blank" title="Facebook" class="hover:scale-125 transition"><i data-feather="facebook"></i></a>
+      <a href="https://www.youtube.com/@CodeWithD" target="_blank" title="YouTube" class="hover:scale-125 transition"><i data-feather="youtube"></i></a>
     </div>
   </section>
 
