--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <!-- Contact -->
   <section id="contact" class="max-w-2xl mx-auto px-4 py-14 bg-gray-900/90 rounded-xl shadow-xl mb-12">
     <h2 class="text-3xl font-bold mb-4 text-transparent bg-clip-text bg-gradient-to-r from-purple-400 to-pink-400">Contact</h2>
-    <p class="mb-4 text-gray-200">Want to collaborate or have a question? Email me at <a href="mailto:your-email@example.com" class="text-pink-400 underline">your-email@example.com</a> or reach out on social media:</p>
+    <p class="mb-4 text-gray-200">Want to collaborate or have a question? Email me at <a href="mailto:diaa2.eldin.atya@gmail.com" class="text-pink-400 underline">diaa2.eldin.atya@gmail.com</a> or reach out on social media:</p>
     <div class="flex gap-8 mt-2">
       <a href="https://github.com/CodewithD2" target="_blank" title="GitHub" class="hover:scale-125 transition"><i data-feather="github"></i></a>
       <a href="https://www.facebook.com/diaa.el.din.atya" target="_blank" title="Facebook" class="hover:scale-125 transition"><i data-feather="facebook"></i></a>
